--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="Hiking itineraries by ChatGPT" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/fav.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,8 +14,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/fav.ico" />
-    <link rel=“shortcut icon” href="%PUBLIC_URL%/fav.ico" type="image/x-icon" >
+    <link rel="shortcut icon" type="image/x-icon"  href="%PUBLIC_URL%/fav.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/fav.ico" >
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
