--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/fav.png">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png">
 
     <meta property="twitter:card" content="summary_large_image">
