more styling + add meta tag for SEO

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Hiking itineraries provided by ChatGPT" />
+    <meta name="description" content="Hiking itineraries, tips & advice provided by Chat GPT" />
 
     <meta property="og:site_name" content="Plan My Hikes">
     <meta property="og:title" content="Plan My Hikes">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Hiking itineraries provided by ChatGPT">
+    <meta property="og:description" content="Hiking itineraries, tips & advice provided by Chat GPT">
+    <meta name="keywords" content="Chat GPT hiking">
     <meta property="og:url" content="https://planmyhikes.com">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
